aws/ingress-rule/spec-file/dev.prometheus.ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prometheus
  name: dev-prometheus-ingress
  annotations:
    #kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # 그룹명을 주어 해당그룹의 로드벨런스에 인그레스를 묶이게 한다.
    alb.ingress.kubernetes.io/group.name: 'mosaic-square'
    # alb.ingress.kubernetes.io/actions.service-2048: >
    #   {"Type":"redirect","RedirectConfig":{"Path":"/","Port":"80","Protocol":"HTTP","statusCode":"HTTP_302"}}
spec:
  ingressClassName: alb
  rules:   
    - host: 'grafana.dev.mosaicsquare.io'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-external-service
                port:
                  number: 80
    - host: 'prometheus.dev.mosaicsquare.io'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-external-service
                port:
                  number: 80
